# rust-admin

./: Cargo.toml  README.md  UPDATE.md  build.rs  nginx.conf.default  setting.toml.default  开发计划.md
X-admin/: index.html  login.html
scripts/: export-db.sh  init.sql  update.sql  v1.0.2.sql  v1.1.0.sql  v1.1.1.sql  v1.1.3.sql
scripts/updates/: 1.1.sql
src/: main.rs
src/caches/: admin_roles.rs  ads.rs  menus.rs  mod.rs  video_authors.rs  video_categories.rs  video_tags.rs
src/common/: acl.rs  mod.rs
src/config/: mod.rs
src/controllers/: admin_roles.rs  admins.rs  ads.rs  index.rs  menus.rs  mod.rs  user_levels.rs  users.rs  video_authors.rs  video_categories.rs  video_replies.rs  video_tags.rs  videos.rs  watch_records.rs
src/filters/: menus.rs  mod.rs
src/models/: admin_roles.rs  admins.rs  ads.rs  configs.rs  index.rs  menus.rs  mod.rs  user_levels.rs  users.rs  video_authors.rs  video_categories.rs  video_replies.rs  video_tags.rs  videos.rs  watch_records.rs
src/validations/: mod.rs
templates/AdminRoles/: edit.html  index.html
templates/Index/: index.html  manage.html
templates/Menus/: index.html
templates/_elements/: head.html
templates/_layouts/: default.html  edit.html  index.html
templates/_macros/: form.html  form_input.html  options.html  search.html
templates/admin_roles/: edit.html  index.html
templates/admins/: change_pwd.html  edit.html  index.html
templates/ads/: edit.html  index.html
templates/configs/: edit.html
templates/index/: error.html  index.html  manage.html  right.html
templates/menus/: edit.html  (+1 more)
(+15 files in other folders)
