[package]
name = "rust-admin"
version = "0.1.0"
authors = ["Administrator <hanting>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
fluffy = { git = "https://github.com/bignut1688/fluffy.git", branch = "V0.2" }
tera = "1.0"
env_logger = "0.6"
mysql = "17.0"
